# fetch_open_auto_dock

./: CMakeLists.txt  Fetch Charging Dock.ipt  README.md  package.xml
include/fetch_auto_dock/: auto_dock.h
launch/: auto_dock.launch  dock_estimator.launch
params/: docking_parameters.yaml
scripts/: dock_on_button.py  undock_on_button.py
src/: auto_dock.cpp  charging_dock_dist.cpp  controller.cpp  init_dock_estimate.cpp  master_dock_controller.cpp  perception.cpp
